<resources>
    <string name="app_name">Exoplanet</string>
    <string name="landing_title">Explore The Solar System.</string>
    <string name="fly_button">Fly</string>
    <string name="mercury">Mercury</string>
    <string name="mercury_desc">Mercury is the smallest planet in the Solar System and the closest to the Sun.\n\nIts orbit around the Sun takes 87.97 Earth days, the shortest of all the Sun\'s planets.\n\nTwo spacecraft have visited Mercury: Mariner 10 flew by in 1974 and 1975; and MESSENGER, launched in 2004, orbited Mercury over 4,000 times in four years before exhausting its fuel and crashing into the planet\'s surface on April 30, 2015.</string>
    <string name="venus">Venus</string>
    <string name="venus_desc">Venus is the second planet from the Sun. It is named after the Roman goddess of love and beauty.\n\nVenus orbits the Sun every 224.7 Earth days.\n\nIts proximity to Earth has made Venus a prime target for early interplanetary exploration. It was the first planet beyond Earth visited by a spacecraft (Mariner 2 in 1962), and the first to be successfully landed on (by Venera 7 in 1970).</string>
    <string name="earth">Earth</string>
    <string name="earth_desc">Earth is the third planet from the Sun and the only astronomical object known to harbor and support life.\n\nEarth orbits around the Sun in about 365.25 days.\n\nAccording to radiometric dating estimation and other evidence, Earth formed over 4.5 billion years ago. Within the first billion years of Earth\'s history, life appeared in the oceans and began to affect Earth\'s atmosphere and surface, leading to the proliferation of anaerobic and, later, aerobic organisms.</string>
    <string name="mercury_planet">Mercury planet</string>
    <string name="venus_planet">Venus planet</string>
    <string name="earth_planet">Earth planet</string>
    <string name="mars_planet">Mars planet</string>
</resources>